# emacs.d

./: .editorconfig  .gitignore  .org-id-locations  custom.el  gnus.init.el  init.el
libraries/: Cask  copenrelational.el  copy-paste-utils.el  dired-extensions.el  exec-path.el  kpm-list.el  nxml-extensions.el  package-extensions.el  path-setup.el  speed7studio-utils.el  w32-browser-extensions.el
libraries/mingus/: TAGS  mingus.el
libraries/mu4e/: mu4e-meta.el
libraries/test/: package-extensions-test.el  path-setup-test.el  test-helper.el  w32-browser-extensions-test.el
project-skeletons/haskell-exe-lib-test-project/: __PROJECT-NAME__.cabal
project-skeletons/haskell-exe-lib-test-project/test/: __PROJECT-NAME__Spec.hs
project-skeletons/haskell-lib-project/: __PROJECT-NAME__.cabal
project-skeletons/haskell-lib-test-project/: __PROJECT-NAME__.cabal
project-skeletons/haskell-lib-test-project/src/: __PROJECT-NAME__.hs
