name:                __PROJECT-NAME__
version:             0.1.0.0
synopsis:            __SYNOPSIS__
-- description:         
license:             MIT
license-file:        COPYING
author:              __AUTHOR__
maintainer:          __AUTHOR__
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     __PROJECT-NAME__
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite __PROJECT-NAME__Tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , __PROJECT-NAME__
  hs-source-dirs:      test
  default-language:    Haskell2010

executable __PROJECT-NAME__Run
  -- setting profiling and benchmarking -> ghc-options: -fprof-auto "-with-rtsopts=-p -s -h -i0.1"
  -- setting the stack size             -> ghc-options:         "-with-rtsopts=-K134217728"
  ghc-options:         -O2
  ghc-options:         -Wall
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , __PROJECT-NAME__
  hs-source-dirs:      src
  default-language:    Haskell2010

